--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@
   color: white;
 }
 .container > h1 {
+  font-family: 'Neonderthaw', cursive;
+  font-weight: 400;
+  font-style: normal;
   font-size: 2rem;
   text-align: center;
   color: orange;
@@ -76,7 +79,12 @@ label {
   background-image: linear-gradient(to bottom, #ffa500, #ff0000);
   text-decoration: none;
 }
+#result {
+  margin: 20px;
+  padding: 5px;
+}
 .bounce {
+  margin-top: 60px;
   -webkit-animation: bounce 0.75s infinite;
 }
 .collapsible {
